--- a/destination.html
+++ b/destination.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap">
 
     <!-- Our custom Css -->
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/utility.css">
-    <link rel="stylesheet" href="/css/index.css">
-
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/utility.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title> Space tourism website</title>
 </head>
 <body class="home">
