add animation to large-button class
arrange project files

change assets file directories

--- a/crew.html
+++ b/crew.html
@@ -10,18 +10,20 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap">
 
     <!-- Our custom Css -->
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/utility.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/utility.css">
+    <link rel="stylesheet" href="./assets/css/animation.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title> Space tourism website</title>
+
+    <title> Space tourism website - Crews </title>
 </head>
 <body class="home">
     <a class="skip-to-main"  href="#main"> Skip to main </a>
     <header class="flex">
         <!--my before-->
         <div>
-            <img src="/assets/favicon-32x32.png" alt="logo" class="logo">
+            <img src="./assets/img/favicon-32x32.png" alt="logo" class="logo">
         </div>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
         <nav>
@@ -29,7 +31,6 @@
                 <li class="active"> <a href="index.html" class=" ff-sans-cond active text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 00 </span> Home </a></li>
                 <li> <a href="destination.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 01 </span> Destination</a></li>
                 <li> <a href="crew.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 02 </span> Crew </a></li>
-                <li> <a href="technology.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 03 </span> Technology </a></li>
             </ul>
         </nav>
     </header>
@@ -37,7 +38,7 @@
 
         <h1 class="uppercase numbered-title text-white"> <span>01</span> Meet your Crew</h1>
 
-        <img src="./assets/crew/image-douglas-hurley.png" alt="">
+        <img src="./assets/img/crew/image-douglas-hurley.png" alt="">
         
         <article class="crew-contents">
             <h2 class="uppercase text-light"> Commander <br/><span class="text-white fs-800"> Douglas Hurley</span> </h2>
@@ -52,7 +53,7 @@
             <button aria-selected="false"><span class="sr-only">The crew engineer</span></button>
         </div>  
     </main>
-
+    <script src="./assets/js/index.js" defer> </script>
+    
 </body>
-
 </html>
