--- a/design.html
+++ b/design.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap">
     <link rel="stylesheet" href="/css/utility.css">
     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/animation.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Desgin</title>
 </head>
 <body body class="bg-dark">
     <div class=" container">
