--- a/destination.html
+++ b/destination.html
@@ -10,17 +10,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap">
 
     <!-- Our custom Css -->
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/utility.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <title> Space tourism website</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/utility.css">
+    <link rel="stylesheet" href="./assets/css/animation.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title> Space tourism website - destinations </title>
 </head>
 <body class="home">
     <a class="skip-to-main"  href="#main"> Skip to main </a>
     <header class="flex">
         <!--my before-->
         <div>
-            <img src="/assets/favicon-32x32.png" alt="logo" class="logo">
+            <img src="./assets/img/favicon-32x32.png" alt="logo" class="logo">
         </div>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
         <nav>
@@ -28,7 +29,6 @@
                 <li class="active"> <a href="index.html" class=" ff-sans-cond active text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 00 </span> Home </a></li>
                 <li> <a href="destination.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 01 </span> Destination</a></li>
                 <li> <a href="crew.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 02 </span> Crew </a></li>
-                <li> <a href="technology.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 03 </span> Technology </a></li>
             </ul>
         </nav>
     </header>
@@ -65,6 +65,6 @@
         </article>
 
     </main>
-    <script src="./index.js" defer> </script>
+    <script src="./assets/js/index.js" defer> </script>
 </body>
 </html>
