--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="flex">
         <!--my before-->
         <div>
-            <img src="./assets/img/favicon-32x32.png" alt="logo" class="logo">
+            <a href="./index.html"> <img src="./assets/img/favicon-32x32.png" alt="logo" class="logo"> </a> 
         </div>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
         <nav>
