--- a/destination.html
+++ b/destination.html
@@ -21,14 +21,14 @@
     <header class="flex">
         <!--my before-->
         <div>
-            <img src="./assets/img/favicon-32x32.png" alt="logo" class="logo">
+            <a href="./index.html"> <img src="./assets/img/favicon-32x32.png" alt="logo" class="logo"> </a> 
         </div>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
         <nav>
             <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
-                <li class="active"> <a href="index.html" class=" ff-sans-cond active text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 00 </span> Home </a></li>
-                <li> <a href="destination.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 01 </span> Destination</a></li>
-                <li> <a href="crew.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 02 </span> Crew </a></li>
+                <li class="active"> <a href="./index.html" class=" ff-sans-cond active text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 00 </span> Home </a></li>
+                <li> <a href="./destination.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 01 </span> Destination</a></li>
+                <li> <a href="./crew.html" class=" ff-sans-cond text-white letter-spacing-2 uppercase"> <span aria-hidden="true"> 02 </span> Crew </a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +38,7 @@
         
         <h1 class="numbered-title text-white"> <span aria-hidden="true"> 01 </span> Pick your destination</h1>
 
-        <img src="assets/destination/image-moon.png" alt="the moon">
+        <img src="./assets/img/destination/image-moon.png" alt="the moon">
 
         <div class="tab-indicators underline-indicators flex">
             <button aria-selected="true" class="uppercase ff-sans-cond text-light bg-dark letter-spacing-2">Moon</button>
